	  %{request:Attribute-Name} and the like.
	* Add support to rlm_sql for post-authentication query execution.
	* Add support to rlm_sql for accounting_update_query_alt
	* Add support to checkrad.pl for mikrotik-brand NASs over SNMP
	* Add support for supplementary groups of switched-to user
	* Add support for xlat-ing backquoted reply values from SQL queries.

FreeRADIUS 0.9.3 ; Date: 2003/11/20 20:15:48, urgency=high

	* Change rlm_eap to not log an error if given a non-EAP packet
	* Fix rlm_ippool's call to pod2man for perl versions before 5.6
	* Fix a remote DoS and due to mis-handling of tagged attributes,
	  and Tunnel-Password attribute.

FreeRADIUS 0.9.2 ; Date: 2003/10/14 19:00:09, urgency=low

	* New rlm_ippool code to fix IP leaks
	* New rlm_ippool_tool for manipulation of rlm_ippool databases

	* Change radrelay to reject records without an Acct-Status-Type attribute
	* Change rlm_counter to reject packets which predate last server reset
	* Change version output to include GNU GPL information
	* Change rlm_ldap to output bad search filters

	* Fix compilation of various modules when not building with pthreads
	* Fix segfault due to poorly initialised value in rlm_mschap
	* Fix to only reject packets once
	* Fix rlm_exec to work when wait=no
	* Fix rlm_attr_filter to work in post-proxy (as intended)
	* Fix rlm_sql to only try to load SQL drivers
	* Fix to orrectly limit size of RADIUS packets
	* Fix usage information to output to stdout when used with -h flag
	* Fix configure to assume gethostbyname is BSD-Style on FreeBSD

FreeRADIUS 0.9.1 ; Date: 2003/09/04 14:56:34, urgency=low

	* Replicate-To-Realm is deprecated, and hence no longer documented
	* Document rlm_detail support for authorize and post-auth sections
	* Improve slightly MySQL accounting record SQL query
	* Opaquefied CHAP-Challenge
	* Add attributes to Nomadix dictionary
	* Fix rlm_exec's parsing of non-attribute return values
	* Fix for a segfault while reading config files